# electronics_trade

./: .env.example  .gitignore  README.md  csv_to_json.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml
datasets/: organization.csv  organization_products.csv  products.csv  providerorganization.csv
electronics_trade/: manage.py
electronics_trade/electronics_trade/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
electronics_trade/orgs/: admin.py  models.py  serializers.py  urls.py  views.py
electronics_trade/orgs/migrations/: 0001_initial.py  0002_auto_20230721_1937.py  0003_auto_20230721_2114.py
electronics_trade/orgs/views/: organization.py  product.py  provider.py
electronics_trade/users/: admin.py  models.py
electronics_trade/users/migrations/: 0001_initial.py
fixtures/: organization.json  organization_products.json  products.json  providerorganization.json
infra/: docker-compose.yml
